<resources>
    <string name="app_name">AreYouBored</string>
    <string name="money_label">How much money are you willing to spend?</string>
    <string name="people_label">How many people are you?</string>
    <string name="nothing">Nothing</string>
    <string name="some">Some</string>
    <string name="a_lot">A lot!</string>
    <string name="settings">Settings</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_random">Random</string>
    <string name="title_settings">Settings</string>
    <string name="participants_label">Participants:</string>
    <string name="price_label">Price:</string>
    <string name="type_label">Type:</string>
    <string name="you_should">You should...</string>
    <string name="something_else">Something else...</string>
    <string name="link_description">Click here for more info</string>
    <string name="do_later">Do later</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
</resources>