<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_random">

    <fragment
        android:id="@+id/navigation_random"
        android:name="com.jorfald.areyoubored.ui.random.RandomFragment"
        android:label="@string/title_random"
        tools:layout="@layout/fragment_random" />

    <fragment
        android:id="@+id/navigation_favorites"
        android:name="com.jorfald.areyoubored.ui.favorites.FavoritesFragment"
        android:label="@string/title_favorites"
        tools:layout="@layout/fragment_favorites" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.jorfald.areyoubored.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>