<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/medium_space">

    <TextView
        android:id="@+id/settings_header_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/settings"
        android:textColor="@color/black"
        android:textSize="@dimen/big_header_text"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/settings_line"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="@dimen/medium_space"
        android:background="@color/black"
        app:layout_constraintTop_toBottomOf="@id/settings_header_text" />

    <TextView
        android:id="@+id/settings_people_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_space"
        android:text="@string/people_label"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/settings_line" />

    <Spinner
        android:id="@+id/settings_people_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_space"
        app:layout_constraintTop_toBottomOf="@id/settings_people_label" />

    <TextView
        android:id="@+id/settings_money_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/big_space"
        android:text="@string/money_label"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/settings_people_spinner" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/settings_money_button_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_space"
        android:background="@drawable/unselected_button"
        android:text="@string/nothing"
        android:textAllCaps="false"
        android:textColor="@color/blue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settings_money_label" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/settings_money_button_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/unselected_button"
        android:text="@string/some"
        android:textAllCaps="false"
        android:textColor="@color/blue"
        app:layout_constraintEnd_toStartOf="@id/settings_money_button_3"
        app:layout_constraintStart_toEndOf="@id/settings_money_button_1"
        app:layout_constraintTop_toTopOf="@id/settings_money_button_1" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/settings_money_button_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/unselected_button"
        android:text="@string/a_lot"
        android:textAllCaps="false"
        android:textColor="@color/blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/settings_money_button_1" />

</androidx.constraintlayout.widget.ConstraintLayout>